test/expected/regression-net-connect.txt
/scripts/regression-net-connect.js:11
  throw error;
  ^

Error: connect ECONNREFUSED 127.0.0.1:24075
    at Object.<anonymous> (/scripts/regression-net-connect.js:r:c)
